# VibeLearning

./: .gitignore
Photo_Watermark_1/: .gitignore  PROJECT_STATUS.md  README.md  README.zh-CN.md  install.sh  install_uv.sh  photo_watermark.py  pyproject.toml
Photo_Watermark_2/: zshrc_temp  需求.txt
Photo_Watermark_2/photo_watermark/: .gitignore  LICENSE  README.md  README_CN.md  UNIVERSAL_BINARY_VERIFICATION.md  pubspec.yaml  setup_github.sh
Photo_Watermark_2/photo_watermark/.github/workflows/: release.yml
Photo_Watermark_2/photo_watermark/lib/: main.dart
Photo_Watermark_2/photo_watermark/lib/models/: app_state.dart
Photo_Watermark_2/photo_watermark/lib/screens/: main_screen.dart
Photo_Watermark_2/photo_watermark/lib/widgets/: image_list.dart  output_directory_selector.dart  process_button.dart  watermark_controls.dart
Photo_Watermark_2/photo_watermark/macos/Runner.xcodeproj/: project.pbxproj
Photo_Watermark_2/photo_watermark/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
Photo_Watermark_2/photo_watermark/macos/Runner/Configs/: AppInfo.xcconfig
Photo_Watermark_2/photo_watermark/test/: widget_test.dart
